[package]
name = "iphonebackupfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "*"
aes-kw = "*"
chrono = { version = "*", features = ["serde"] }
cbc = "*"
fuser = "*"
libsqlite3-sys = {version = "*", features = ["bundled"] }
plist = "*"
nom = "*"
pbkdf2 = "*"
serde = { version = "*", features = ["derive"] }
sha1 = "*"
sha2 = "*"
rusqlite = "*"
thread-scoped-ref = "*"

[profile.release]
lto = true
